change server port

--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,9 @@
   <title>Threevanny</title>
 </head>
 <body>
+  <header class="header">
+    <h1>THREEVANNY</h1>
+  </header>
   <p>Hello, I'm Threevanny</p>
   <script src="javascript.js"></script>
 </body>
