--- a/static/index.html
+++ b/static/index.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="main.css">
   <title>Threevanny</title>
 </head>
+
 <body>
+
   <header class="header">
-    <h1>THREEVANNY</h1>
+    <div class="main-header">
+      <h1>THREEVANNY</h1>
+    </div>
+    <nav class="nav">
+      <a href="/">Home</a>
+      <a href="#">Contact</a>
+      <a href="#">About</a>
+    </nav>
+
   </header>
-  <p>Hello, I'm Threevanny</p>
+
+  <main class="main">
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut itaque numquam pariatur consequuntur dolore natus
+      fuga praesentium accusamus, et facilis, aspernatur porro. Suscipit omnis ratione, at praesentium distinctio
+      repudiandae quaerat. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, excepturi autem.
+      Doloribus harum labore repellendus ipsum tempora, quia quaerat animi voluptatum ipsam maiores et amet doloremque
+      ipsa optio voluptate voluptas.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur minima neque, quia quod vel cumque officiis
+      ullam iure quos vitae tempora consequatur sapiente maiores. Similique suscipit fugiat ab autem aliquid? Lorem
+      ipsum dolor sit amet consectetur adipisicing elit. Atque, veritatis nihil. Repellat iusto quo accusamus
+      perferendis quaerat, magnam id eum ullam dolorem aspernatur dolorum, esse maiores officia, placeat aut eveniet.
+    </p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut itaque numquam pariatur consequuntur dolore natus
+      fuga praesentium accusamus, et facilis, aspernatur porro. Suscipit omnis ratione, at praesentium distinctio
+      repudiandae quaerat. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, excepturi autem.
+      Doloribus harum labore repellendus ipsum tempora, quia quaerat animi voluptatum ipsam maiores et amet doloremque
+      ipsa optio voluptate voluptas.</p>
+  </main>
+
+  <footer class="footer">
+    Copyright © threevanny.com
+  </footer>
   <script src="javascript.js"></script>
 </body>
+
 </html>
