layout with bulma

--- a/static/index.html
+++ b/static/index.html
@@ -5,45 +5,68 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
   <link rel="stylesheet" href="main.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <title>Threevanny</title>
 </head>
 
 <body>
+<section class="hero is-light is-fullheight">
+  <div class="hero-head">
+    <header class="navbar">
+      <div class="container">
+        <div class="navbar-brand">
+          <a class="navbar-item">
+            <!-- <img src="" alt="Logo"> -->
+          </a>
+          <span class="navbar-burger burger" data-target="navbarMenuHeroC">
+            <span></span>
+            <span></span>
+            <span></span>
+          </span>
+        </div>
+        <div id="navbarMenuHeroC" class="navbar-menu">
+          <div class="navbar-end">
+            <span class="navbar-item">
+              <a class="button is-light is-inverted" href="https://twitter.com/threevanny" target="_blank">
+                <span class="icon">
+                  <i class="fab fa-twitter"></i>
+                </span>
+                <span>Twitter</span>
+              </a>
+            </span>
+            <span class="navbar-item">
+              <a class="button is-light is-inverted" href="https://github.com/threevanny" target="_blank">
+                <span class="icon">
+                  <i class="fab fa-github"></i>
+                </span>
+                <span>GitHub</span>
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+    </header>
+  </div>
 
-  <header class="header">
-    <div class="main-header">
-      <h1>THREEVANNY</h1>
+  <div class="hero-body">
+    <div class="container has-text-centered">
+      <main class="content">
+        <h1 class="title">threevanny</h1>
+        <p class="subtitle">I'm a programmer, I like computers and build things on the internet.</p>
+      </main>
     </div>
-    <nav class="nav">
-      <a href="/">Home</a>
-      <a href="#">Contact</a>
-      <a href="#">About</a>
-    </nav>
+  </div>
 
-  </header>
-
-  <main class="main">
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut itaque numquam pariatur consequuntur dolore natus
-      fuga praesentium accusamus, et facilis, aspernatur porro. Suscipit omnis ratione, at praesentium distinctio
-      repudiandae quaerat. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, excepturi autem.
-      Doloribus harum labore repellendus ipsum tempora, quia quaerat animi voluptatum ipsam maiores et amet doloremque
-      ipsa optio voluptate voluptas.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur minima neque, quia quod vel cumque officiis
-      ullam iure quos vitae tempora consequatur sapiente maiores. Similique suscipit fugiat ab autem aliquid? Lorem
-      ipsum dolor sit amet consectetur adipisicing elit. Atque, veritatis nihil. Repellat iusto quo accusamus
-      perferendis quaerat, magnam id eum ullam dolorem aspernatur dolorum, esse maiores officia, placeat aut eveniet.
-    </p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aut itaque numquam pariatur consequuntur dolore natus
-      fuga praesentium accusamus, et facilis, aspernatur porro. Suscipit omnis ratione, at praesentium distinctio
-      repudiandae quaerat. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium, excepturi autem.
-      Doloribus harum labore repellendus ipsum tempora, quia quaerat animi voluptatum ipsam maiores et amet doloremque
-      ipsa optio voluptate voluptas.</p>
-  </main>
-
-  <footer class="footer">
-    Copyright © threevanny.com
-  </footer>
+  <div class="hero-foot">
+    <div class="tabs is-boxed is-fullwidth">
+      <div class="container has-text-centered">
+        <p><small>© 2020 threvanny. All rights reserved.</small></p>
+      </div>
+    </div>
+  </div>
+</section>
   <script src="javascript.js"></script>
 </body>
 
