--- a/static/index.html
+++ b/static/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
-  <link rel="stylesheet" href="main.css">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+  <link rel="stylesheet" href="main.css">
   <title>Threevanny</title>
 </head>
 
@@ -62,7 +62,7 @@
   <div class="hero-foot">
     <div class="tabs is-boxed is-fullwidth">
       <div class="container has-text-centered">
-        <p><small>© 2020 threvanny. All rights reserved.</small></p>
+        <p><small>© 2020 Threvanny. All rights reserved.</small></p>
       </div>
     </div>
   </div>
