--- a/static/index.html
+++ b/static/index.html
@@ -8,65 +8,65 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <link rel="stylesheet" href="main.css">
-  <title>Geovanny Reyes | Threevanny</title>
+  <title>&#128165; Geovanny Reyes | Threevanny</title>
 </head>
 
 <body>
-<section class="hero is-light is-fullheight">
-  <div class="hero-head">
-    <header class="navbar">
-      <div class="container">
-        <div class="navbar-brand">
-          <a class="navbar-item">
-            <!-- <img src="" alt="Logo"> -->
-          </a>
-          <span class="navbar-burger burger" data-target="navbarMenuHeroC">
-            <span></span>
-            <span></span>
-            <span></span>
-          </span>
-        </div>
-        <div id="navbarMenuHeroC" class="navbar-menu">
-          <div class="navbar-end">
-            <span class="navbar-item">
-              <a class="button is-light is-inverted" href="https://twitter.com/threevanny" target="_blank">
-                <span class="icon">
-                  <i class="fab fa-twitter"></i>
-                </span>
-                <span>Twitter</span>
-              </a>
-            </span>
-            <span class="navbar-item">
-              <a class="button is-light is-inverted" href="https://github.com/threevanny" target="_blank">
-                <span class="icon">
-                  <i class="fab fa-github"></i>
-                </span>
-                <span>GitHub</span>
-              </a>
+  <section class="hero is-light is-fullheight">
+    <div class="hero-head">
+      <header class="navbar">
+        <div class="container">
+          <div class="navbar-brand">
+            <a class="navbar-item">
+              <!-- <img src="" alt="Logo"> -->
+            </a>
+            <span class="navbar-burger burger" data-target="navbarMenuHeroC">
+              <span></span>
+              <span></span>
+              <span></span>
             </span>
           </div>
+          <div id="navbarMenuHeroC" class="navbar-menu">
+            <div class="navbar-end">
+              <span class="navbar-item">
+                <a class="button is-light is-inverted" href="https://twitter.com/threevanny" target="_blank">
+                  <span class="icon">
+                    <i class="fab fa-twitter"></i>
+                  </span>
+                  <span>Twitter</span>
+                </a>
+              </span>
+              <span class="navbar-item">
+                <a class="button is-light is-inverted" href="https://github.com/threevanny" target="_blank">
+                  <span class="icon">
+                    <i class="fab fa-github"></i>
+                  </span>
+                  <span>GitHub</span>
+                </a>
+              </span>
+            </div>
+          </div>
+        </div>
+      </header>
+    </div>
+
+    <div class="hero-body">
+      <div class="container has-text-centered">
+        <main class="content">
+          <h1 class="title">threevanny</h1>
+          <p class="subtitle">I'm a programmer, I like computers and build things on the internet.</p>
+        </main>
+      </div>
+    </div>
+
+    <div class="hero-foot">
+      <div class="tabs is-boxed is-fullwidth">
+        <div class="container has-text-centered">
+          <p><small>© 2020 Geovanny Reyes. All rights reserved.</small></p>
         </div>
       </div>
-    </header>
-  </div>
-
-  <div class="hero-body">
-    <div class="container has-text-centered">
-      <main class="content">
-        <h1 class="title">threevanny</h1>
-        <p class="subtitle">I'm a programmer, I like computers and build things on the internet.</p>
-      </main>
     </div>
-  </div>
-
-  <div class="hero-foot">
-    <div class="tabs is-boxed is-fullwidth">
-      <div class="container has-text-centered">
-        <p><small>© 2020 Geovanny Reyes. All rights reserved.</small></p>
-      </div>
-    </div>
-  </div>
-</section>
+  </section>
   <script src="javascript.js"></script>
 </body>
 
