--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="I'm a programmer, I like computers and build things on the internet.">
+  <meta name="keywords" content="Coding, Software Development, Programming Languages">
+  <meta name="author" content="Geovanny Reyes">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
