--- a/static/index.html
+++ b/static/index.html
@@ -65,7 +65,7 @@
     <div class="hero-foot">
       <div class="tabs is-boxed is-fullwidth">
         <div class="container has-text-centered">
-          <p><small>© 2020 Geovanny Reyes. All rights reserved.</small></p>
+          <p><small>© 2020-2021 Geovanny Reyes. All rights reserved.</small></p>
         </div>
       </div>
     </div>
